fix dropdown inner padding and spacing

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -42,13 +42,13 @@ limitations under the License.
         }
     }
 
-    .mx_BaseCard_back ~ .mx_ThreadPanel__header {
+    .mx_BaseCard_back~.mx_ThreadPanel__header {
         width: calc(100% - 60px);
         margin-left: 30px;
     }
 
     .mx_ThreadPanel__header {
-        width: calc(100% - 30px);
+        width: calc(100% - 38px);
         height: 24px;
         display: flex;
         flex: 1;
@@ -184,7 +184,7 @@ limitations under the License.
     }
 
     .mx_ThreadPanel_dropdown {
-        padding: 3px 8px;
+        padding: 3px 4px 3px 8px;
         border-radius: 4px;
         line-height: 1.5;
         user-select: none;
